trying to fix linters errors

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <section id="container">
       <form action="" class="form"></form>
       <div class="todoList"></div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
