Added heading h1 for not keeping index.html empty and trying to remove linter error

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 
     </head>
   <body>
+    <h1>To-Do List</h1>
     <section id="container">
       <form action="" class="form"></form>
       <div class="todoList"></div>
     </section>
-    
+
   </body>
 </html>
